fix: typo checks

--- a/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
+++ b/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
@@ -17,7 +17,7 @@ This feature is available since Webiny **v5.19.0**.
 
 <Alert type="success" title="What You’ll Learn">
 
-- how to add a custom callback to button element.
+- how to add a custom callback to the button element.
 
 </Alert>
 
@@ -25,10 +25,10 @@ This feature is available since Webiny **v5.19.0**.
 
 By default, the **Button** element comes with 2 working action types out of the box:
 
-- **Link**: useful to create a link to different web URL;
+- **Link**: useful to create a link to different web URLs;
 - **Scroll to element**: in case you want to scroll to a specific element within the page.
 
-A third option is available, **Click handler**: this need a bit of work in order to function.
+A third option is available, **Click handler**: this needs a bit of work to function.
 
 In this tutorial, you will learn how to add a custom button click handler, available to be used within the Page Builder.
 
@@ -36,7 +36,7 @@ In this tutorial, you will learn how to add a custom button click handler, avail
 
 Although you can place and organize the plugins in any way you prefer for your project, we recommend adopting the following organization.
 
-When creating new plugin, it’s recommended to have all the needed files in a single shared folder. This is because the plugin will need to be imported both within the Admin Area (`apps/admin`) and Website (`apps/website) applications.
+When creating a new plugin, it’s recommended to have all the needed files in a single shared folder. This is because the plugin will need to be imported both within the Admin Area (`apps/admin`) and Website (`apps/website) applications.
 
 With that in mind, for this tutorial, you will create the new `pb-button-click-handlers` folder in the `apps/extensions folder.
 
@@ -58,7 +58,7 @@ By default, the `extensions` folder does not exist in the `apps` directory, so y
 }
 ```
 
-- add `"apps/extensions/*"` to workspaces packages inside `package.json` in project root, in case you haven't done it before already:
+- add `"apps/extensions/*"` to workspaces packages inside `package.json` in the project root, in case you haven't done it before already:
 
 ```diff-js {project-root}/package.json
 (...)
@@ -86,7 +86,7 @@ export const buttonClickHandlers = [
   - **Page Builder editor** plugins: `apps/admin/src/plugins/pageBuilder/editorPlugins.ts`
   - **Page Builder render** plugins: `apps/admin/src/plugins/pageBuilder/renderPlugins.ts`
   - **Website Page Builder** plugins: `apps/website/src/plugins/pageBuilder.ts`
-- link workspaces by running `yarn install` command from project root. After completion there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `pb-button-click-handlers` package in `node_modules`.
+- link workspaces by running `yarn install` command from the project root. After completion, there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `pb-button-click-handlers` package in `node_modules`.
 
 ## Register a Button Handler
 Now, go back to our custom plugin file to register a new button handler. 
@@ -119,7 +119,7 @@ As you can see, the configuration object has the following properties:
 ### Custom Button Handler With Variables
 You might need to allow your admin user to set one or more custom values and pass them to the handler. 
 
-In this case, you just need to add a couple of more properties to our handler configuration object: 
+In this case, you just need to add a couple more properties to our handler configuration object: 
 
 ```ts apps/extensions/pb-button-click-handlers/editor.ts
 import { PbButtonElementClickHandlerPlugin } from "@webiny/app-page-builder/types";
@@ -148,7 +148,7 @@ You are adding the following property:
 
 - `variables`: a list of allowed variables with name, label and default values. Those will be received by your custom handler.
 
-Now, your admin users are able to define custom values to predefined variables via the button's "Action" settings within the Page Builder.
+Now, your admin users can define custom values to predefined variables via the button's "Action" settings within the Page Builder.
 
 ![Button handler with custom variables inside page builder](./assets//customize-button-callback-handler/02-button-handler-variables.png)
 
