--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -9,9 +9,17 @@ import { Alert } from "@/components/Alert";
 ## Lambda Functions
 
 ### Removing the Headless CMS Lambda ([#2945](https://github.com/webiny/webiny-js/pull/2945))
-<Alert type="danger">
+<Alert type="warning">
 
 In the 5.35.0 we are removing the Headless CMS Lambda from the deployment.
+
+</Alert>
+
+<Alert type="danger">
+
+For this to work, the user will need to have the new project setup, which is available since the `5.29.0` version.
+  
+If a user does not have the new project setup, they should not be upgrading to the `5.35.0` version.
 
 </Alert>
 
