feat(changelog): explanation about pulumi

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -25,11 +25,13 @@ If a user does not have the new project setup, they should not be upgrading to t
 
 This is a breaking change as users will need to move all their existing custom plugins and code, imported in the `apps/api/headlessCMS/src/index.ts` and `apps/api/headlessCMS/src/security.ts` folder, to the `apps/api/graphql/src/index.ts` and `apps/api/graphql/src/security.ts`.
 
+Users will also need to change any custom Pulumi code, which currently uses the Headless CMS Lambda.
+
 We cannot do that automatically for users, because the probability for some error to happen is very high.
 This should not be a problem for most of our users, but if there are any - we are available for help on our [Community Slack](https://webiny-community.slack.com/).
 
 The reason behind this is to simplify the deployment and development process.
 
-The `/graphql` and `/cms` routes remain the same, as we internally map routes to Lambdas, so users do not need to worry about those.
+The `/graphql` and `/cms` routes remain the same, as we internally map routes to the Lambda, so users do not need to worry about those.
 
 Due to this change, in both `/graphql` and `/cms` routes, all the applications are available on the `context` object.
