docs: added validator and reference field video

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/add-validator-to-fields.mdx
@@ -4,6 +4,7 @@ description: Learn how to add a validator to a content model's field in Headless
 ---
 
 import { Alert } from "@/components/Alert";
+import addValidatorsToFields from "./assets/add-validator-to-fields/add-validator-to-fields.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -18,6 +19,7 @@ A field validator helps you ensure the user input meets specific requirements an
 In this tutorial, we will learn how to add validators to a content model's fields.
 As an example, we will add validators to the **LONG TEXT** and **NUMBER** fields used in the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial.
 
+<Video src={addValidatorsToFields} controls={true}/>
 
 ## Step 1: Add `Required` and `Min length` validators to a LONG TEXT field
 
