--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/reference-field.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/reference-field.mdx
@@ -4,6 +4,7 @@ description: Learn how to use reference field in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
+import referenceField from "./assets/reference-field/reference-field.mp4";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
@@ -24,6 +25,8 @@ We will do this in four steps:
 - Step 2: Add content entries to the **Category** content model.
 - Step 2: Update the **Product** content model and add a category reference field to it.
 - Step 3: Create a content entry in the **Product** content model with reference to the **Category** content model.
+
+<Video src={referenceField} controls={true}/>
 
 ## Step 1: Create 'Category' content model
 
