Content Entry Revisions: Samarpit First Draft Review 1 done

--- a/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/essentials/content-entry-revisions.mdx
@@ -1,26 +1,26 @@
 ---
 title: Content Entry Revisions
-description: Learn how to how to publish a previous revision, and create a new entry version from a revision in Headless CMS.
+description: Learn how to publish a content entry's previous revision, and create a new entry version from a revision in Headless CMS.
 ---
 
 import { Alert } from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- how to publish a previous revision
-- how to create a new content entry from a revision
+- how to publish a content entry's previous revision
+- how to create a new entry version from a revision
 
 </Alert>
 
 Webiny stores every saved/published change in a content entry as a separate revision.  
 In this tutorial, we will learn how to publish a previous revision of a content entry.
-We will also learn how to create a new content entry from a revision.
+We will also learn how to create a new entry version from a revision.
 As an example, we will use the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial:
 
 We will do this in 3 steps:
 - Step 1: Create a content entry in the **Product** content model and make some revisions of it.
 - Step 2: Publish a previous revision.
-- Step 3: Create a new content entry from a revision.
+- Step 3: Create a new entry version from a revision.
 
 ## Step 1: Create a Content Entry and its Revisions
 
@@ -35,7 +35,7 @@ If you are not familiar with how to create a content entry, please follow the [C
     | Price       | **15**                                                                                          |
     | Category    | **Clothes**                                                                                     |
 
-    **Note**: If you haven't added the **Category** field to the **Product** content, either follow the [Reference Field](../essentials/reference-field) tutorial or skip the **Category** field.
+    **Note**: If you haven't added the **Category** field to the **Product** content model, skip it (or add it by following the [Reference Field](../essentials/reference-field) tutorial).
 
 2. Now, update the **Name** and **Description** textboxes with the following values:
 
@@ -46,8 +46,8 @@ If you are not familiar with how to create a content entry, please follow the [C
 
 3. Click **SAVE & PUBLISH**.
 
-    **Note**: Clicking **SAVE** will create a new revision of the content entry with updated field values and save it as a draft.
-    Whereas clicking **SAVE & PUBLISH** will create the revision and publish it.
+    **Note**: Clicking **SAVE** will create a new version of the content entry with updated field values and save it as a draft.
+    Whereas clicking **SAVE & PUBLISH** will create a new version and publish it.
 
 4. Create another revision by updating the **Name** and **Description** textboxes with the following values:
 
@@ -62,25 +62,29 @@ If you are not familiar with how to create a content entry, please follow the [C
 
 1. In the **Women's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
 
-2. To publish the previous **Men's Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it (⁝).
+2. To publish the previous **Men's Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
     ✔️ Menu opens.
 
-3. Click **Publish** ().
+3. Click **Publish**.
+
+    ✔️ The **Men’s Solid Round Neck Blue T-Shirt** revision gets published. **CONTENT** tab opens with the message "Successfully published revision #2!".
+
+    **Note**: The dropdown on the top-left corner of the content tab shows **V3 (UNPUBLISHED)**. To open the published entry version, click **V2 (Published)** in the dropdown.
 
 
-## Step 3: Create a new content entry from a revision
+## Step 3: Create a new entry version from a revision
 
 1. In the **Women's Solid Round Neck Blue T-Shirt** content entry, click the **REVISIONS** tab.
 
-2. To create a new content entry from the revision **Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it (⁝).
+2. To create a new entry version from the previous **Solid Round Neck Blue T-Shirt** revision, click the **Kebab Menu** on it ( ⁝ ).
 
     ✔️ Menu opens.
 
-3. Click **New from current** ().
+3. Click **New from current**.
 
-    ✔️ **CONTENT** tab opens with a new draft of the previous revision.
+    ✔️ **CONTENT** tab opens with a new draft of the previous **Solid Round Neck Blue T-Shirt** revision.
 
-    **Optional**: Make any desired changes in any field(s).
+    **Optional**: Make the desired change(s) in the respective field(s).
 
 4. Click **SAVE & PUBLISH**.
