--- a/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
+++ b/src/docs/5.29.x/infrastructure/basics/modify-cloud-infrastructure.mdx
@@ -109,6 +109,36 @@ Note that the `tagResources` function applies tags only to resources that can ac
 
 </Alert>
 
+### Defining Multiple Production Environments
+
+Upon running the [`webiny deploy`](/docs/{version}/core-development-concepts/basics/project-deployment) command, when `prod` is passed as the environment name, a Webiny project is deployed in the so-called [production deployment mode](https://www.webiny.com/docs/architecture/deployment-modes/production).
+
+On order to use the production deployment mode for environments other than `prod`, we can use the `productionEnvironments` parameter. The following example shows how we can use the production mode for the `staging` environment:
+
+```diff-ts apps/core/webiny.application.ts
+import { createCoreApp } from "@webiny/serverless-cms-aws";
+
+export default createCoreApp({
+  pulumiResourceNamePrefix: "wby-",
+
+  // Treats provided environments as production environments, which
+  // are deployed in production deployment mode.
++ productionEnvironments: ["prod", "staging"]
+});
+```
+
+Note that when specifying additional production environments, they should be specified across all project applications, meaning:
+
+1. `apps/core/webiny.application.ts`
+2. `apps/api/webiny.application.ts`
+3. `apps/admin/webiny.application.ts`
+4. `apps/website/webiny.application.ts`
+
+1. **Core** ([`apps/core/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/ddb/apps/core/webiny.application.ts)
+2. **API** ([`apps/api/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/ddb/apps/api/webiny.application.ts)
+3. **Admin** ([`apps/admin/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/common/apps/admin/webiny.application.ts)
+4. **Website** ([`apps/website/webiny.application.ts`](https://github.com/webiny/webiny-js/blob/v5.29.0/packages/cwp-template-aws/template/common/apps/website/webiny.application.ts)
+
 ### Modifying AWS IAM Roles
 
 #### AWS Lambda - Default GraphQL API Function
