fix: code section

--- a/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
+++ b/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
@@ -38,7 +38,7 @@ Although you can place and organize the plugins in any way you prefer for your p
 
 When creating a new plugin, it’s recommended to have all the needed files in a single shared folder. This is because the plugin will need to be imported both within the Admin Area (`apps/admin`) and Website (`apps/website) applications.
 
-With that in mind, for this tutorial, you will create the new `pb-button-click-handlers` folder in the `apps/extensions folder.
+With that in mind, for this tutorial, you will create the new `pb-button-click-handlers` folder in the `apps/extensions` folder.
 
 
 <Alert type="info">
