feat: add `pb-page-element-button-click-handler` plugin type

--- a/src/docs/5.28.x/page-builder/references/plugins.mdx
+++ b/src/docs/5.28.x/page-builder/references/plugins.mdx
@@ -116,3 +116,25 @@ export type PbPageLayoutPlugin = Plugin & {
   layout: PbPageLayout;
 };
 ```
+
+### `pb-page-element-button-click-handler`
+```ts
+export type PbButtonElementClickHandlerVariable = {
+  // Variable key, received by the custom handler.
+  name: string;
+  // Variable label, shown in button "Action" settings.
+  label: string;
+  // Variable default value.
+  defaultValue: any;
+}
+
+export type PbButtonElementClickHandlerPlugin<TVariables = Record<string, any>> = Plugin & {
+  type: "pb-page-element-button-click-handler";
+  // Title shown in the Page Builder button configuration settings;
+  title: string;
+  // List of variables the user will be able to set via button "Action" settings.
+  variables?: PbButtonElementClickHandlerVariable[];
+  // Your custom button handler, receives the variables set by the user.
+  handler: (params: { variables: TVariables }) => void | Promise<void>;
+};
+```
