feat: extensive article about lambda removal

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -8,30 +8,16 @@ import { Alert } from "@/components/Alert";
 
 ## Lambda Functions
 
-### Removing the Headless CMS Lambda ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+### Removing the Headless CMS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
+
 <Alert type="warning">
 
-In the 5.35.0 we are removing the Headless CMS Lambda from the deployment.
+In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it is quite simple to fix.
 
 </Alert>
 
-<Alert type="danger">
+Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
 
-For this to work, the user will need to have the new project setup, which is available since the `5.29.0` version.
-  
-If a user does not have the new project setup, they should not be upgrading to the `5.35.0` version.
+We removed the Headless CMS Lambda Function to simplify the development and deployment process for the users.
 
-</Alert>
-
-This is a breaking change as users will need to move all their existing custom plugins and code, imported in the `apps/api/headlessCMS/src/index.ts` and `apps/api/headlessCMS/src/security.ts` folder, to the `apps/api/graphql/src/index.ts` and `apps/api/graphql/src/security.ts`.
-
-Users will also need to change any custom Pulumi code, which currently uses the Headless CMS Lambda.
-
-We cannot do that automatically for users, because the probability for some error to happen is very high.
-This should not be a problem for most of our users, but if there are any - we are available for help on our [Community Slack](https://webiny-community.slack.com/).
-
-The reason behind this is to simplify the deployment and development process.
-
-The `/graphql` and `/cms` routes remain the same, as we internally map routes to the Lambda, so users do not need to worry about those.
-
-Due to this change, in both `/graphql` and `/cms` routes, all the applications are available on the `context` object.
+To learn how to fix the code breaks, please follow the [Upgrade Guide](/docs/release-notes/5.35.0/upgrade-guide).
