--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -46,7 +46,17 @@ yarn webiny upgrade
   manually from your npx directory.
 </Alert>
 
-## 3. Deploy Your Project
+## 3. Upgrade Your Code to the New Lambda Function Setup
+
+<Alert type="danger">
+
+In the 5.35.0 we are removing the Headless CMS Lambda function from the deployment. This is a breaking change, but it should not take you a long time to fix.
+
+</Alert>
+
+Please read the [Removing the Headless CMS Lambda Function](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) article to learn how to upgrade your code to the new Lambda function setup.
+
+## 4. Deploy Your Project
 
 Proceed by redeploying your Webiny project:
 
@@ -74,7 +84,3 @@ As stated in the [Upgrade Webiny](../upgrade-webiny#pre-production-environments-
 Learn more about different deployment environments in the [CI/CD / Environments](../../core-development-concepts/ci-cd/environments) key topic.
 
 </Alert>
-
-## 4. Final Words
-
-Due to the vast amount of potential customizations in the user land, it is impossible to create a 100% reliable upgrade process to satisfy everyone. If you run into any build issues, Typescript errors, etc., don't hesitate to reach out on our [Slack Community](https://webiny.com/slack) with details of your issue (post text, screenshots, whatever you have), and we'll help you out with your upgrade.
