feat: does the user need to do the upgrade

--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -49,6 +49,13 @@ Now there is no need to import plugins in two locations, as everything is contai
 We cannot do the upgrade automatically for users, because the probability for some error to happen is very high, as they probably have a lot of customizations.
 This should not be a problem for most of our users, but if there are any - we are available for help on our [Community Slack](https://webiny-community.slack.com/).
 
+## Do I Need to Do Anything?
+
+If you have custom code or plugins in the `apps/api/headlessCMS` folder, yes, you will need to do some changes.
+Also, if you have changed the `apps/api/webiny.application.ts` file, and you are referencing the `ApiHeadlessCMS` class, you will need to change it to the `ApiGraphql` class.
+
+If you have not changed anything, you can skip this article.
+
 ## How to Migrate?
 
 Although this is a breaking change, it is quite simple to fix.
