--- a/src/docs/5.34.x/infrastructure/basics/best-practices.mdx
+++ b/src/docs/5.34.x/infrastructure/basics/best-practices.mdx
@@ -11,7 +11,7 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-## Protected vs Un-protected deployment modes
+## Protected vs Unprotected deployment modes
 
 Webiny comes with two main deployment modes, the `production` and the `development`. By default, we deploy the `production` deployment modes to the `prod` environment and the `development` deployment modes for all other environments. 
 
@@ -79,6 +79,12 @@ So as a best practice, do not make any changes to the resources outside your pro
 <Alert type="info">
 
 [Click here](./modify-cloud-infrastructure) to learn how to modify your cloud infrastructure the right way.
+
+</Alert>
+
+<Alert type="warning">
+
+Be especially careful with operations that update the names of resources. For example, a typical pitfall is modifying the value of `pulumiResourceNamePrefix`. This changes the resource name, but since resources cannot be renamed, they will get destroyed. In scenarios like these, it's key to preview deployments first, and have the resources you don't want to lose, marked as protected.
 
 </Alert>
 
