docs: added pagination and sorting section

--- a/src/docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
+++ b/src/docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
@@ -107,6 +107,50 @@ Once the API token has been created, you should see it in the user interface, fo
 
 From there, you can easily grab it by clicking on the **Copy** button, located on the right side of the API token, and paste it in an appropriate place, somewhere where your GraphQL client can access it.
 
+## Pagination and Sorting
+
+### Pagination
+
+You can paginate the resulting entries using the `after` argument in a query. For instance, here is an example that demonstrates how to paginate a result set:
+
+```graphql
+{
+  listArticles(after: previousCursorValue) {
+    data {
+      id
+      title
+    }
+    meta {
+      hasMoreItems
+      totalCount
+      cursor
+    }
+  }
+}
+```
+
+When running the first query, there is no `cursor` value available, so you can send an `undefined`, `null`, or `empty string` value, for example: `listArticles(after: null)`. However, for the subsequent queries, you can use the `cursor` value returned from the current query.
+
+### Sorting
+
+To get the sorted result set, you can use of the `sort` argument in a query.
+Here's an example to sort articles by their title in ascending order.
+
+```graphql
+{
+  listArticles(sort: title_ASC) {
+    data {
+      id
+      title
+    }
+  }
+}
+```
+
+You can also visit the Docs section in the API Playground to explore the available sorting enums for a model.
+
+![Sort Enum](./assets/using-graphql-api/sort-enums.png)
+
 ## FAQ
 
 ### When using the API Playground, is my access limited in any way?
