docs: improved the pagination and sorting section Thanks Sven and Bruno for inputs

--- a/src/docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
+++ b/src/docs/5.28.x/headless-cms/basics/using-graphql-api.mdx
@@ -115,7 +115,7 @@ You can paginate the resulting entries using the `after` argument in a query. Fo
 
 ```graphql
 {
-  listArticles(after: previousCursorValue) {
+  listArticles(after: previousCursorValue, limit: 10) {
     data {
       id
       title
@@ -130,6 +130,13 @@ You can paginate the resulting entries using the `after` argument in a query. Fo
 ```
 
 When running the first query, there is no `cursor` value available, so you can send an `undefined`, `null`, or `empty string` value, for example: `listArticles(after: null)`. However, for the subsequent queries, you can use the `cursor` value returned from the current query.
+
+<Alert type="info">
+
+Please note that Webiny does cursor-based pagination, so it does not support the `offset` option in pagination.
+
+</Alert>
+
 
 ### Sorting
 
@@ -147,9 +154,9 @@ Here's an example to sort articles by their title in ascending order.
 }
 ```
 
-You can also visit the Docs section in the API Playground to explore the available sorting enums for a model.
+The `sort` options are automatically generated based on the fields in the content model. To view all available `sort` options for a model, you can inspect the model's schema using the API Playground.
 
-![Sort Enum](./assets/using-graphql-api/sort-enums.png)
+![Sort Enums](./assets/using-graphql-api/sort-enums.png)
 
 ## FAQ
 
