fix: link "Launching your Amazon OpenSearch Service domains within a VPC" article

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -40,6 +40,12 @@ Projects that are using the Amazon DynamoDB setup don't have this parameter set.
 
 </Alert>
 
+<Alert type={"danger"}>
+
+Changing VPC settings on an existing Amazon ElasticSearch cluster may cause a complete redeployment, causing all data to be lost! Check out the [Launching your Amazon OpenSearch Service domains within a VPC](https://docs.aws.amazon.com/opensearch-service/latest/developerguide/vpc.html) article to learn more.
+
+</Alert>
+
 ### 1. Core (`apps/core`)
 
 The Core application's `webiny.application.ts` file should look like the following:
