--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -1,7 +1,7 @@
 ---
 id: removing-the-headless-cms-lambda-function
-title: Removing the Headless CMS Lambda Function
-description: Steps to remove the Headless CMS Lambda function from your project.
+title: Removing the Headless CMS AWS Lambda Function
+description: Steps to remove the Headless CMS AWS Lambda function from your project.
 ---
 
 import { Alert } from "@/components/Alert";
@@ -16,7 +16,7 @@ Before starting with the migration, make sure you're using Webiny version 5.35.0
 
 <Alert type="danger">
 
-With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed the Headless CMS Lambda Function, and it is a breaking change, although quite simple one to fix.
+With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed the Headless CMS AWS Lambda Function, and it is a breaking change, although quite simple one to fix.
 
 </Alert>
 
@@ -36,7 +36,7 @@ To learn how to upgrade to a new project setup, please read this article.
 
 Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
 
-We removed the Headless CMS Lambda Function from both the new project codebase and the Pulumi deployment code.
+We removed the Headless CMS AWS Lambda Function from both the new project codebase and the Pulumi deployment code.
 
 ## What Is the Reason for This Change?
 
