fix: change "Lambda Function" to "Lambda function"

--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -1,6 +1,6 @@
 ---
 id: removing-the-headless-cms-lambda-function
-title: Removing the Headless CMS AWS Lambda Function
+title: Removing the Headless CMS AWS Lambda function
 description: Steps to remove the Headless CMS AWS Lambda function from your project.
 ---
 
@@ -16,7 +16,7 @@ Before starting with the migration, make sure you're using Webiny version 5.35.0
 
 <Alert type="danger">
 
-With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed the Headless CMS AWS Lambda Function, and it is a breaking change, although quite simple one to fix.
+With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed the Headless CMS AWS Lambda function, and it is a breaking change, although quite simple one to fix.
 
 </Alert>
 
@@ -34,15 +34,15 @@ To learn how to upgrade to a new project setup, please read this article.
 
 ## What's Changed?
 
-Starting with the `5.35.0` release, there is only a single Lambda Function which handles the requests - the one called GraphQL (`apps/api/graphql`).
+Starting with the `5.35.0` release, there is only a single Lambda function which handles the requests - the one called GraphQL (`apps/api/graphql`).
 
-We removed the Headless CMS AWS Lambda Function from both the new project codebase and the Pulumi deployment code.
+We removed the Headless CMS AWS Lambda function from both the new project codebase and the Pulumi deployment code.
 
 ## What Is the Reason for This Change?
 
 The reason behind this is to simplify the deployment and development process for our users, and us, as well.
 
-Now there is no need to import plugins in two locations, as everything is contained within the `GraphQL` Lambda Function, and all the applications are available on the `context` object.
+Now there is no need to import plugins in two locations, as everything is contained within the `GraphQL` Lambda function, and all the applications are available on the `context` object.
 
 ## Why Is There No Automated Upgrade?
 
