fix: reword / simplify text

--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -20,17 +20,7 @@ With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed t
 
 </Alert>
 
-## Prerequisites
-
-<Alert type="danger">
-
-For this to work, you will need to have the new project setup, which is available since the `5.29.0` version.
-
-If you do not have the new project setup, you should not be upgrading to the `5.35.0` version.
-
-</Alert>
-
-To learn how to upgrade to a new project setup, please read this article.
+## Introduction
 
 ## What's Changed?
 
