--- a/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
+++ b/src/docs/shared/release-notes/5.35.0/removing-the-headless-cms-lambda-function.mdx
@@ -14,60 +14,58 @@ Before starting with the migration, make sure you're using Webiny version 5.35.0
 
 ## Introduction
 
-<Alert type="danger">
+Prior to 5.35.0 version of Webiny, all remote GraphQL API HTTP requests were handled by two separate AWS Lambda functions. One function was responsible for serving the Default GraphQL API (accessible via the `/graphql` endpoint), while the other was responsible for serving the [Headless CMS GraphQL API](/docs/headless-cms/basics/graphql-api) (accessible via the `/cms/{type}/{locale}` endpoint).
 
-With the [5.35.0 release](/docs/release-notes/5.35.0/changelog), we've removed the Headless CMS AWS Lambda function, and it is a breaking change, although quite simple one to fix.
+Starting with 5.35.0, all remote GraphQL API HTTP requests are handled by a single AWS Lambda function. In other words, the function is responsible for serving both the Default and Headless CMS GraphQL APIs. Note that the mentioned `/graphql` and `/cms/{type}/{locale}` endpoints remain unchanged.
 
-</Alert>
+## Prerequisites
 
-## Introduction
-
-## What's Changed?
-
-Starting with the `5.35.0` release, there is only a single Lambda function which handles the requests - the one called GraphQL (`apps/api/graphql`).
-
-We removed the Headless CMS AWS Lambda function from both the new project codebase and the Pulumi deployment code.
+Before upgrading to 5.35.0 and continuing with this migration guide, please ensure your Webiny project is using the [new project setup](/docs/release-notes/5.29.0/changelog#brand-new-project-setup), introduced with Webiny [5.29.0](/docs/release-notes/5.29.0/changelog). In case you did not already migrate, please visit the [migration guide](#TODO).
 
 ## What Is the Reason for This Change?
 
-The reason behind this is to simplify the deployment and development process for our users, and us, as well.
+The main reason behind this change is the simplification of project development and deployment. For example, prior to `5.35.0`, users would have two separate folders in their `apps/api` folder:
 
-Now there is no need to import plugins in two locations, as everything is contained within the `GraphQL` Lambda function, and all the applications are available on the `context` object.
+1. `apps/api/graphql` - Default GraphQL API 
+2. `apps/api/headlessCMS` - Headless CMS GraphQL API
 
-## Why Is There No Automated Upgrade?
+This means that, upon extending the GraphQL APIs via various plugins, in some cases users would need to understand within which folder the plugins would need to be registered.
 
-We cannot do the upgrade automatically for users, because the probability for some error to happen is very high, as they probably have a lot of customizations.
-This should not be a problem for most of our users, but if there are any - we are available for help on our [Community Slack](https://webiny-community.slack.com/).
+With both GraphQL APIs now consolidated under a single AWS Lambda function, the two folders were reduced to a single `apps/api/graphql` folder. Meaning, all GraphQL API-related plugins are now registered within the same folder, making it easier for developers to introduce customizations.
+
+## Why Is There No Automated Migration?
+
+Essentially, because users might already have a number of different GraphQL API-related customizations in place, at this time, we cannot provide an automatic migration.
+
+To migrate, users need to perform the migration manually, which consists of a couple of relatively simple steps. More on this in the following section.
 
 ## Do I Need to Do Anything?
 
-If you have custom code or plugins in the `apps/api/headlessCMS` folder, yes, you will need to do some changes.
+If you have custom application code or plugins within the `apps/api/headlessCMS` folder, then the answer is yes, there are migration steps to take.
+
 Also, if you have changed the `apps/api/webiny.application.ts` file, and you are referencing the `ApiHeadlessCMS` class, you will need to change it to the `ApiGraphql` class.
 
-If you have not changed anything, you can skip this article.
+If none of the above has been performed within your Webiny project, then you can skip this article.
 
 ## How to Migrate?
 
-Although this is a breaking change, it is quite simple to fix.
+The migration consists of a couple of relatively simple steps: 
 
-There are a few steps which you need to follow:
-
-- move your custom code and imported plugins from the `apps/api/headlessCMS/src/index.ts` to the `apps/api/graphql/src/index.ts`
-- move your custom code and imported plugins from the `apps/api/headlessCMS/src/index.ts` to the `apps/api/graphql/src/security.ts`
-- if you are using the import `import { ApiHeadlessCMS } from "@webiny/pulumi-aws"` in the `apps/api/webiny.application.ts`, point it to the `import { ApiGraphql } from "@webiny/pulumi-aws"`, and change the code accordingly
-
-## What About the `graphql` and `cms` Routes?
-
-The `/graphql` and `/cms` routes remain the same, as we internally map routes to the Lambda function, so users do not need to worry about those.
-
-Due to this change, in both `/graphql` and `/cms` routes, all the applications are available on the `context` object.
+1. Move any custom application code and imported plugins from the `apps/api/headlessCMS/src/index.ts` to `apps/api/graphql/src/index.ts`.
+2. Move any custom code application and imported plugins from the `apps/api/headlessCMS/src/index.ts` to `apps/api/graphql/src/security.ts`.
+3. If you are using the import `import { ApiHeadlessCMS } from "@webiny/pulumi-aws"` in the `apps/api/webiny.application.ts`, point it to the `import { ApiGraphql } from "@webiny/pulumi-aws"`, and change the code accordingly,
 
 ## Cleanup
 
-After you have migrated all your plugins and code, deployed and tested the project, feel free to delete the `apps/api/headless/CMS` folder.
+After you have migrated all your plugins and other related application code, deployed and tested the project, feel free to delete the `apps/api/headless/CMS` folder.
 
 ## Conclusion
 
-As this was a breaking change, we did not feel it was necessary to release a new major version of Webiny, as it is a simple change in the code which fixes the code breaking.
+Despite the fact that the removal of Headless CMS AWS Lambda Function could be considered as a breaking change, we still decided to keep the major version of Webiny unchanged. Once migrated, users can still continue to use their Webiny project, as if there were no changes introduced whatsoever. 
 
-If you have any questions, feel free to reach out to us on our [Community Slack](https://webiny-community.slack.com/).
+<Alert type={"info"}>
+
+  For additional questions or any other type of feedback, feel free to reach out to us on our [Community Slack](https://webiny-community.slack.com/).
+
+</Alert>
+
