fix: add link to the advanced usage example

--- a/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
+++ b/src/docs/5.34.x/enterprise/use-existing-amazon-vpc.mdx
@@ -19,6 +19,12 @@ And although this may work for multiple types of users and projects, when it com
 
 In this article, we describe how enterprise organizations can deploy their Webiny project into an existing Amazon VPC.
 
+<Alert type={"info"}>
+
+  When it comes to the code, this article tries to keep as simple as possible. For a more advanced example, one which demonstrates how to introduce better code organization and make the code more maintainable, please check out [this advanced usage example](https://github.com/webiny/webiny-examples/tree/master/use-existing-amazon-vpc-advanced-usage).
+
+</Alert>
+
 ## Configuration
 
 In order to deploy Webiny into an existing Amazon VPC, we need to apply four configuration changes to four default project applications that are included in every Webiny project:
