fix: add additional examples section

--- a/src/docs/5.34.x/page-builder/extending/create-a-page-element.mdx
+++ b/src/docs/5.34.x/page-builder/extending/create-a-page-element.mdx
@@ -433,3 +433,7 @@ Creating custom page elements is certainly an interesting option when users need
 On the code level, this could be creating completely custom (renderer) React components, including needed external NPM libraries, or even issuing remote HTTP requests to external HTTP APIs in order to retrieve data from standalone external systems.
 
 On the other hand, custom page elements also add additional flexibility by allowing content creators to tweak elements' settings and, ultimately, allowing them to achieve more with just a single page element.
+
+## Additional Examples
+
+- [Cards Page Element Example](https://github.com/webiny/webiny-examples/tree/master/page-builder/cards-page-element)
