--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -11,13 +11,24 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-Webiny offers content localization that allows you to adapt your content to different languages by creating multiple locales.
-For each locale, you can create content model groups, content models, content entries, etc., separately.
+Webiny offers content localization that allows you to adapt your content to different languages and locations by creating multiple locales.
+The CMS provides you the flexibility to define a totally different content schema for different locales. That means for each locale, you can create content model groups, content models, content entries, etc., separately.
+
+**Note**: On creating a new locale, you get a clean instance of the CMS for it. You need to add content schema and content to each locale separately. You will not find any previously created content in a new locale.
 
 In this tutorial, we will learn how to create a content model for multiple locales.
-We will do this in 2 steps:
+We will do this in 4 steps:
 - Step 1: Create and select a new locale.
-- Step 2: Create a content model group and a content model in the new locale.
+- Step 2: Create a content model group in the new locale.
+- Step 3: Clone a content model into the new locale.
+- Step 4: Create a content entry in the new locale.
+
+
+## Prerequisites
+
+To follow this tutorial, you need the **Product** content model to clone it.
+If you don't have the **Product** content model that we created in the [Create Content Model](../essentials/create-content-model) tutorial, please create it.
+
 
 ## Step 1: Create and Select a New Locale
 
@@ -33,11 +44,9 @@ We will create a new locale for the **Italic** language.
 5. Click **SAVE LOCALE**.
 6. In the ** LOCALE** dropdown, click **it-IT**.
 
-    **Note**: On creating and selecting a new locale, you will not find any content you created before. You need to add content schema and content to each locale separately.
 
-
-## Step 2: Create a Content Model Group and a Content Model in the New Locale
-If you are not familiar with how to create a content model group or a content model, please follow the [Create Content Model Group](../essentials/create-content-model-group) and [Create Content Model](../essentials/create-content-model) tutorials.
+## Step 2: Create a Content Model Group in the New Locale
+If you are not familiar with how to create a content model group or a content model, please follow the [Create Content Model Group](../essentials/create-content-model-group) tutorial.
 
 1. Create a content model group with the following attributes:
 
@@ -47,18 +56,57 @@ If you are not familiar with how to create a content model group or a content mo
     | Group icon  | 🛒                                  |
     | Description | **Gruppo di modelli di e-commerce** |
 
-2. Create a content model with the following attributes:
 
-    | Field       | Values                                    |
-    | :-------    | :----------                               |
-    | Name        | **Prodotto**                              |
-    | Group       | **Commercio Elettronico**                 |
-    | Description | **Modello di contenuto del prodotto demo**|
+## Step 3: Clone a Content Model into the New Locale
 
-3. Add the following fields to the **Prodotto** content model:
+In this step, we will clone the **Product** content model from the **en-US** locale into the **it-IT** locale. We will update the clone content model's attributes with the following values:
 
-    | Field Type | Field  Label     |
-    | :----------| :----------------|
-    | Text       | **Nome**         |
-    | Long text  | **Descrizione**  |
-    | Number     | **Prezzo**       |
+| Attribute   | Values                                    |
+| :-------    | :----------                               |
+| Name        | **Prodotto**                              |
+| Group       | **Commercio Elettronico**                 |
+| Description | **Modello di contenuto del prodotto demo**|
+
+**Note**: You can also [create a content model](../essentials/create-content-model) from scratch in the **it-IT** locale if you want.
+
+1. In the ** LOCALE** dropdown, click **en-UN**.
+
+2. From the **Side Menu**, Click **Headless CMS** > **Models**.
+
+3. Hover on the **Product** content model.
+
+4. Click the **CLONE CONTENT MODEL** icon ( *clone icon required* ).
+
+    ✔️ The **Clone Content Model** screen opens.
+
+5. In the **Name** textbox, update the text to **Prodotto**.
+
+6. In the **Content model locale** dropdown, click **it-IT**.
+
+7. In the **Content model group** dropdown, click **Commercio Elettronico**.
+
+8. In the **Description** textbox, update the text to **Modello di contenuto del prodotto demo**.
+    *Description textbox is uneditable in the CMS.*
+
+9. Click **+ CLONE**.
+
+10. Update the lables of the fields of the **Prodotto** content model with the following values:
+
+    | Old Label    | New Label        |
+    | :------------| :----------------|
+    | Name         | **Nome**         |
+    | Description  | **Descrizione**  |
+    | Price        | **Prezzo**       |
+
+
+## Step 4: Create a Content Entry in the New Locale
+
+If you are not familiar with how to create a content entry, please follow the [Create Content Entry](../essentials/create-content-entry) tutorial.
+
+1. Add a content entry in the **Prodotto** content model with the following attributes:
+
+    | Attribute   | Values                                      |
+    | :-------    | :----------                                 |
+    | Nome        | **Allegra K Abito Shift Abito Shift Donna** |
+    | Descrizione | **Girocollo increspato, manica del braccialetto, polsini elastici, chiusura a bottone posteriore, foro della serratura posteriore, completamente foderato, mini abito**                                                     |
+    | Prezzo      | **55**                                      |
