Removed the word 'creation' from some lines

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
@@ -34,7 +34,7 @@ We will do this in 3 steps:
 
 2. Click **+ NEW GROUP**.
    
-   ✔️ The **Untitled** group creation screen opens.
+   ✔️ The **Untitled** screen opens.
 
 3. In the **Name** textbox, type **E-Commerce**.
 
@@ -88,7 +88,7 @@ We will do this in 3 steps:
 
 2. Click **+ NEW USER**.
 
-    ✔️ The **New User** creation screen opens.
+    ✔️ The **New User** screen opens.
 
 3. In the **First Name** textbox, type *new user's first name* ( Ex: John ).
 
