Changed C to c in 'A list of content model groups in the current...'

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/user-creation.mdx
@@ -59,7 +59,7 @@ We will do this in 3 steps:
 
     a. In the **Access Scope** dropdown, click **Only specific groups**.
 
-    ✔️ A list of Content model groups in the current locale appears.
+    ✔️ A list of content model groups in the current locale appears.
     
     b. Select the **E-Commerce** checkbox.
 
