Made some language changes

--- a/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
+++ b/src/docs/5.28.x/user-guides/headless-cms/advanced/content-localization.mdx
@@ -12,9 +12,9 @@ import { Alert } from "@/components/Alert";
 </Alert>
 
 Webiny offers content localization that allows you to adapt your content to different languages and locations by creating multiple locales.
-The CMS provides you the flexibility to define a totally different content schema for different locales. That means for each locale, you can create content model groups, content models, content entries, etc., separately.
+The CMS provides you the flexibility to define different content schemas for different locales. That means for each locale, you can create separate content model groups, content models, content entries, etc.
 
-**Note**: On creating a new locale, you get a clean instance of the CMS for it. You need to add content schema and content to each locale separately. You will not find any previously created content in a new locale.
+**Note**: On creating a new locale, you get a clean instance of the CMS for that locale. You need to add content schema and content to each locale separately. You will not find any previously created content in a new locale.
 
 In this tutorial, we will learn how to create a content model for multiple locales.
 We will do this in 4 steps:
@@ -40,7 +40,7 @@ We will create a new locale for the **Italic** language.
    ✔️ The **New locale** section opens.
 
 3. In the **Code** dropdown, type **it**.
-4. From the available options in the dropdown, click **it-IT**.
+4. In the available options in the dropdown, click **it-IT**.
 5. Click **SAVE LOCALE**.
 6. In the ** LOCALE** dropdown, click **it-IT**.
 
